--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -82,14 +82,15 @@
             <hr />
             <div class="card">
                 <div class="card-block mb-1">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Group Name">
+                    <div class="input-group">                        
+                        <input id="new-group-name" type="text" class="form-control" placeholder="Group Name">
                         <span class="input-group-btn">
                             <button id="add-group" type="button" class="btn btn-secondary btn-success" style="cursor:pointer;">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </span>
                     </div>
+                    <span id="group-validation-info" class="text-danger hidden"></span>
                 </div>
                 <div class="card-block">
                     <ul id="group-list" class="list-group" style="overflow-y:auto;max-height:400px">
@@ -97,7 +98,7 @@
                         {
                         <li class="list-group-item">
                             <label class="form-check-label" style="cursor:pointer">
-                                <input class="form-check-input" type="checkbox" value="">
+                                <input class="form-check-input" type="checkbox" value="@item.Name">
                                 @item.Name
                             </label>
                             <span class="fa fa-remove pull-right" style="cursor:pointer;color:darkred"></span>
