--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AddressBook.ViewModels.ContactCreateViewModel
 
 <div class="row card bg-light col-lg-12 py-2">
-    @using (Html.BeginForm("Create", "Contacts", FormMethod.Post, new { @class= "form-horizontal" }))
+    @using (Html.BeginForm("Create", "Contacts", FormMethod.Post, new { id="create-contact", @class= "form-horizontal" }))
     {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -93,16 +93,18 @@
                     <span id="group-validation-info" class="text-danger hidden"></span>
                 </div>
                 <div class="card-block">
-                    <ul id="group-list" class="list-group" style="overflow-y:auto;max-height:250px">
+                    <ul id="group-list" class="list-group" style="overflow-y:auto;max-height:250px"> 
                         @foreach (var item in Model.Groups)
                         {
-                        <li class="list-group-item">
-                            <label class="form-check-label" style="cursor:pointer">
-                                <input class="form-check-input" type="checkbox" value="@item.Name">
-                                @item.Name
-                            </label>
-                            <span class="fa fa-remove pull-right remove-group-btn" onclick="$(this).closest('li.list-group-item').remove()" style="cursor:pointer;color:darkred"></span>
-                        </li>
+                            <li class="list-group-item">
+                                <label class="form-check-label" style="cursor:pointer">
+                                    @Html.CheckBox("Groups", false, new { @class= "form-check-input" }) @item.Name
+                                    @*<input class="form-check-input" type="checkbox" name="Groups" value="@item.Name">
+                                    @item.Name
+                                    <input type="hidden" value="false" name="@item.Name" />*@
+                                </label>
+                                <span class="fa fa-remove pull-right remove-group-btn" onclick="$(this).closest('li.list-group-item').remove()" style="cursor:pointer;color:darkred"></span>
+                            </li>
                         }
                     </ul>
                 </div>
