--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <div class="form-group">
                 @Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
                 <div>
@@ -42,22 +42,29 @@
                 </div>
             </div>
             <div class="form-group">
+                @Html.LabelFor(model => model.Gender, new { @class = "control-label" })
+                <div>
+                    @Html.DropDownListFor(model => model.Gender, (SelectList)ViewBag.GenderList, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
                 @Html.LabelFor(model => model.Birthdate, new { @class = "control-label" })
                 <div>
                     @Html.EditorFor(model => model.Birthdate, new { htmlAttributes = new { @class = "form-control datepicker", placeholder = "Birthdate dd/mm/yyyy" } })
                     @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Relationship, new { @class = "control-label" })
-                <div>
-                    @Html.EditorFor(model => model.Relationship, new { htmlAttributes = new { @class = "form-control", placeholder = "Relationship" } })
-                    @Html.ValidationMessageFor(model => model.Relationship, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            </div>            
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <div class="form-group">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Relationship, new { @class = "control-label" })
+                    <div>
+                        @Html.EditorFor(model => model.Relationship, new { htmlAttributes = new { @class = "form-control", placeholder = "Relationship" } })
+                        @Html.ValidationMessageFor(model => model.Relationship, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
                 @Html.LabelFor(model => model.Title, new { @class="control-label" })
                 <div>
                     @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Title" } })
@@ -72,6 +79,16 @@
                     @Html.ValidationMessageFor(model => model.Organization, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Note, new { @class = "control-label" })
+                <div>
+                    @Html.TextAreaFor(model => model.Note, new { @class = "form-control", rows = 3, cols = 3, placeholder = "Add note..." } )
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2">
+
         </div>
         <div class="col-lg-2">
             <div class="row mb-1">
