--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -25,6 +25,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="form-group mt-lg-3">
+                @Html.TextAreaFor(model => model.Note, new { @class = "form-control", rows = 3, cols = 2, placeholder = "Add note..." })                
+            </div>
         </div>
         <div class="col-lg-3">
             <div class="form-group">
@@ -77,13 +81,6 @@
                 <div>
                     @Html.EditorFor(model => model.Organization, new { htmlAttributes = new { @class = "form-control", placeholder = "Organization" } })
                     @Html.ValidationMessageFor(model => model.Organization, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Note, new { @class = "control-label" })
-                <div>
-                    @Html.TextAreaFor(model => model.Note, new { @class = "form-control", rows = 3, cols = 3, placeholder = "Add note..." } )
                 </div>
             </div>
         </div>
