--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -90,7 +90,7 @@
         <div class="col-lg-2">
             <div class="row mb-1">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Add Contact" class="btn btn-primary" />
                 </div>
             </div>
             <hr />
@@ -112,10 +112,8 @@
                         {
                             <li class="list-group-item">
                                 <label class="form-check-label" style="cursor:pointer">
-                                    @Html.CheckBox("Groups", false, new { @class= "form-check-input" }) @item.Name
-                                    @*<input class="form-check-input" type="checkbox" name="Groups" value="@item.Name">
+                                    <input class="form-check-input" type="checkbox" name="Groups" value="@item.ID">
                                     @item.Name
-                                    <input type="hidden" value="false" name="@item.Name" />*@
                                 </label>
                                 <span class="fa fa-remove pull-right remove-group-btn" onclick="$(this).closest('li.list-group-item').remove()" style="cursor:pointer;color:darkred"></span>
                             </li>
