--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -115,7 +115,7 @@
                                     <input class="form-check-input" type="checkbox" name="Groups" value="@item.ID">
                                     @item.Name
                                 </label>
-                                <span class="fa fa-remove pull-right remove-group-btn" onclick="$(this).closest('li.list-group-item').remove()" style="cursor:pointer;color:darkred"></span>
+                                <span class="fa fa-remove pull-right remove-group-btn" style="cursor:pointer;color:darkred"></span>
                             </li>
                         }
                     </ul>
