--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-sm-3 col-md-3 col-lg-3">
-        <div class="card" style="overflow:auto;">
+        <div class="card">
             <div class="card-block">
                 <div class="card bg-light">
                     <div class="card-block">
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-block list-group bg-light" id="contact-list-target">
+            <div class="card-block list-group bg-light" id="contact-list-target" style="overflow:auto;max-height:45em">
                 <div class="mx-auto loader"></div>
             </div>
         </div>
