--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -7,8 +7,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="row">
-            <div class="col-lg-2">
-                <div class="card" style="width: 11rem;">
+            <div class="col-sm-6 col-md-6 col-lg-2">
+                <div class="card" style="">
                     <img src="@Url.Content(Model.ProfileImagePath)" alt="Alternate Text" class="profile-image-upload img-thumbnail" style="max-height:120px" />
                     <div class="card-block">
                         <label class="btn btn-outline-info mt-2 mx-1">
@@ -30,7 +30,7 @@
                     @Html.TextAreaFor(model => model.Note, new { @class = "form-control", rows = 3, cols = 2, placeholder = "Add note..." })
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-sm-6 col-md-6 col-lg-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
                     <div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-sm-6 col-md-6 col-lg-3">
                 <div class="form-group">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Relationship, new { @class = "control-label" })
@@ -84,10 +84,41 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-2">
-               @Html.ComboBox("AddressType", Model.AddressType, (IEnumerable<string>)ViewBag.AddressTypeList)
+            <div class="col-sm-6 col-md-6 col-lg-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Street, new { @class = "control-label" })
+                    <div>
+                        @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control", placeholder = "Street name" } })
+                        @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.HouseNumber, new { @class = "control-label" })
+                    <div>
+                        @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "House number" } })
+                        @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.AddressType, new { @class = "control-label" })
+                    <div>
+                        @Html.ComboBox("AddressType", Model.AddressType, (IEnumerable<string>)ViewBag.AddressTypeList)
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.AddressType, new { @class = "control-label" })
+                    <div>
+                        @Html.ComboBox("AddressType", Model.AddressType, (IEnumerable<string>)ViewBag.AddressTypeList)
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.AddressType, new { @class = "control-label" })
+                    <div>
+                        @Html.ComboBox("AddressType", Model.AddressType, (IEnumerable<string>)ViewBag.AddressTypeList)
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-sm-6 col-md-6 col-lg-2">
                 <div class="row mb-1">
                     <div class="col-md-offset-2 col-md-10">
                         <button type="submit" class="btn btn-primary">
